# dot-files

./: .gitignore  .gitmodules  Makefile  README  README.md  Xresources  bash_profile  bashrc  dunstrc  emacs  gitconfig  gitignore  gnome-keyring-helper  hgignore  hgrc  tmux.conf  vimrc  xinitrc  xmobarrc  xmobarrc_mpd  xmonad.hs
Xresources.d/: colors
bash-completion.d/available/: rake-bash-completion  rvm-bash-completion  sudo-chown-bash-completion
bash.d/available/: bash-aliases.bash  bash-completions.bash  bash-history.bash  cabal.bash  checkwinsize.bash  color-aliases.bash  envoy.bash  eval-dircolors.bash  keychain.bash  mpc-aliases.bash  mpc-randy.bash  pacaur.bash  prompt-command.bash  rvm.bash  solarized-fix.bash  term-256color.bash  tmux-rails.bash  vagrant.bash  vim-editor.bash  xdg-dirs.bash
bash.d/enabled/: 10-bash-completions.bash  20-term-256color.bash  25-eval-dircolors.bash  40-bash-aliases.bash  40-bash-history.bash  40-checkwinsize.bash  40-color-aliases.bash
emacs.d/: .gitignore
mutt/: .gitignore  jongrocho  muttrc  tangleforest
pacaur.gpg/: gpg.conf
polipo/: config
systemd/user/: emacs.service  fehbg.service  polipo.service  redshift@.service  unclutter.service  updates.service  updates.timer  urxvtd.service  xautolock.service  xresources.service
systemd/user/scripts/: fehbg  updates
tmux/: colors.conf
uzbl/: config  style.css
vim/: .netrwhist
vim/after/syntax/: tex.vim
vim/bundle/haskell-mode/: .VimballRecord
vim/doc/tests/: BoldAndListsAmbiguity.creole  ItalicsAndUrlAmbiguity.creole  mine.creole
vim/ftdetect/: creole.vim  lhs.vim  puppet.vim
vim/ftplugin/: clojure.vim  cs.vim  cucumber.vim  go.vim  hamlet.vim  haskell.vim  html.vim  java.vim  javascript.vim  latex.vim  lhaskell.vim.old  markdown.vim  puppet.vim  python.vim  tex.vim
vim/indent/: clojure.vim  python.vim
vim/spell/: en.utf-8.add  en.utf-8.add.spl
vim/syntax/: creole.vim  haskell.vim  mkd.vim
xmonad/: .gitignore  GNUmakefile  build  stack.yaml  xmobar.hs  xmonad.hs  xmonadrc.cabal  xmonadrc.hs
xmonad/icons/: audio-volume-medium.xpm  audio-volume-muted.xpm  audio_1.xpm  audio_6.xpm  battery_0.xpm  battery_1.xpm  battery_2.xpm  battery_4.xpm  battery_5.xpm  battery_8.xpm  battery_charging_0.xpm  battery_charging_1.xpm  battery_charging_2.xpm  battery_charging_5.xpm  battery_charging_8.xpm  circle_filling_0.xpm  circle_filling_1.xpm  circle_filling_2.xpm  circle_filling_3.xpm  circle_filling_4.xpm  circle_filling_5.xpm  circle_filling_6.xpm  circle_filling_7.xpm  circle_filling_8.xpm  fan_0.xpm  fan_3.xpm  fan_6.xpm
xmonad/lib/Solarized/: Dark.hs  Light.hi  Light.hs
xmonad/src/: Solarized.hs  SpawnNamedPipes.hs  Theme.hs  XMobar.hs  XMobarHs.hs
xmonad/src/Solarized/: Dark.hs  Light.hs
