------------------------------------------------------------------------------
name: xmonadrc
version: 0.1.0.0
synopsis: Jonathan's XMonad Configuration
license: BSD3
author: Jonathan Grochowski <jongrocho@gmail.com>
maintainer: Jonathan Grochowski <jongrocho@gmail.com>
copyright: Copyright (c) 2015 Jonathan Grochowski
category: Graphics
build-type: Simple
cabal-version: >=1.8

------------------------------------------------------------------------------
library
  exposed-modules:
    Solarized
    Solarized.Dark
    Solarized.Light
    Theme
    XMobarHs

  other-modules:

  hs-source-dirs: src

  build-depends: base >= 4.0 && < 5.0
               , xmonad == 0.11
               , xmonad-contrib == 0.11.3
               , directory >= 1.2 && < 1.3
               , filepath >= 1.3 && < 1.4
               , text >= 1.2 && < 1.3
               , text-show >= 0.6 && < 0.7

------------------------------------------------------------------------------
executable xmonadrc
  main-is: xmonadrc.hs
  build-depends: base
               , xmonad
               , xmonad-contrib
               , xmonadrc

executable xmobar
  main-is: xmobar.hs
  build-depends: base
               , xmonadrc
               , text
               , hostname == 1.0
