------------------------------------------------------------------------------
name: xmonadrc
version: 0.1.0.0
synopsis: Jonathan's XMonad Configuration
license: BSD3
author: Jonathan Grochowski <jongrocho@gmail.com>
maintainer: Jonathan Grochowski <jongrocho@gmail.com>
copyright: Copyright (c) 2015 Jonathan Grochowski
category: Graphics
build-type: Simple
cabal-version: >=1.8

------------------------------------------------------------------------------
library
  exposed-modules:
    Solarized
    Solarized.Dark
    Solarized.Light
    SpawnNamedPipes
    Theme
    XMobarHs
    XMobar

  other-modules:

  hs-source-dirs: src

  build-depends: base >= 4.0 && < 5.0
               , xmonad == 0.12
               , xmonad-contrib == 0.12
               , bytestring >= 0.10 && < 0.11
               , containers >= 0.5 && < 0.6
               , directory >= 1.2 && < 1.3
               , filepath >= 1.4 && < 1.5
               , hostname == 1.0
               , text >= 1.2 && < 1.3
               , text-show >= 2.1 && < 2.2

------------------------------------------------------------------------------
executable xmonadrc
  main-is: xmonadrc.hs
  build-depends: base
               , xmonad
               , xmonad-contrib
               , xmonadrc
               , bytestring
               , containers
               , data-default >= 0.5 && < 0.6
               , directory
               , hostname
               , text
               , xdg-basedir >= 0.2 && < 0.3
