------------------------------------------------------------------------------
name: xmonadrc
version: 0.1.0.0
synopsis: Jonathan's XMonad Configuration
license: BSD3
author: Jonathan Grochowski <jongrocho@gmail.com>
maintainer: Jonathan Grochowski <jongrocho@gmail.com>
copyright: Copyright (c) 2015 Jonathan Grochowski
category: Graphics
build-type: Simple
cabal-version: >=1.8

------------------------------------------------------------------------------
library
  exposed-modules:
    Solarized
    Solarized.Dark
    Solarized.Light
    SpawnNamedPipes
    Theme
    XMobarHs
    XMobar

  other-modules:

  hs-source-dirs: src

  build-depends: base >= 4.0 && < 5.0
               , xmonad
               , xmonad-contrib
               , bytestring
               , containers
               , directory
               , filepath
               , hostname
               , text
               , text-show
               , yaml

------------------------------------------------------------------------------
executable xmonadrc
  main-is: xmonad.hs
  build-depends: base
               , xmonad
               , xmonad-contrib
               , xmonadrc
               , bytestring
               , containers
               , data-default
               , directory
               , hostname
               , text
               , xdg-basedir
               , yaml
